avoid that the player gets too wide on mobile

--- a/css/snake.css
+++ b/css/snake.css
@@ -21,6 +21,7 @@ ul.snake-list li a.label:hover {
 
 .snake-box {
   width: 100%;
+  max-width:50em;
   display: flex;
   align-items: flex-start;
 }
